--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>EscolAzul</title>
     <link rel="stylesheet" href="./assets/fonts/myriad-pro/style.css">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="icon" href="./assets/img/soleil.webp">
 </head>
 <body>
     <header>
